Add eth_getLogs benchmark script first version

--- a/package.json
+++ b/package.json
@@ -6,10 +6,7 @@
   "scripts": {
     "benchmark:eth_getBlockNumber:darwinia": "ts-node src/benchmark.ts eth_getBlockNumber darwinia",
     "benchmark:eth_getCode:darwinia": "ts-node src/benchmark.ts eth_getCode darwinia",
-
-    "benchmark:eth_getBlockNumber:crab": "ts-node src/benchmark.ts eth_getBlockNumber crab",
-    "benchmark:eth_getCode:crab": "ts-node src/benchmark.ts eth_getCode crab"
-
+    "benchmark:eth_getLogs:darwinia": "ts-node src/benchmark.ts eth_getLogs darwinia"
   },
   "keywords": [],
   "author": "",
