--- a/package.json
+++ b/package.json
@@ -1,20 +1,21 @@
 {
-  "name": "ethereum-rpc-benchmark",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "benchmark:eth_getBlockNumber:darwinia": "ts-node src/benchmark.ts eth_getBlockNumber darwinia",
-    "benchmark:eth_getCode:darwinia": "ts-node src/benchmark.ts eth_getCode darwinia",
-    "benchmark:eth_getLogs:darwinia": "ts-node src/benchmark.ts eth_getLogs darwinia"
-  },
-  "keywords": [],
-  "author": "boundless-forest",
-  "license": "ISC",
-  "dependencies": {
-    "@types/node": "^20.16.13",
-    "ethers": "^6.13.4",
-    "typescript": "^5.6.3",
-    "ts-node": "^10.9.2"
-  }
+	"name": "ethereum-rpc-benchmark",
+	"version": "1.0.0",
+	"description": "",
+	"main": "index.js",
+	"scripts": {
+		"start": "tsx src/run.ts",
+		"ethBlockNumber": "tsx src/ethBlockNumber.ts"
+	},
+	"keywords": [],
+	"author": "boundless-forest",
+	"license": "ISC",
+	"type": "module",
+	"dependencies": {
+		"@types/node": "^22.7.8",
+		"ethers": "^6.13.4",
+		"smol-toml": "^1.3.0",
+		"ts-node": "^10.9.2",
+		"typescript": "^5.6.3"
+	}
 }
