--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,9 @@
 {
 	"compilerOptions": {
-		"module": "NodeNext",
-		"target": "es2020",
+		"module": "ES2022",
+		"target": "ES2022",
 		"esModuleInterop": true,
+		"moduleResolution": "node",
 		// Emit
 		"outDir": "build",
 		"noEmitOnError": true,
