--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
 	"description": "",
 	"main": "index.js",
 	"scripts": {
-		"ethBlockNumber": "tsx src/ethBlockNumber.ts"
+		"ethBlockNumber": "tsx src/ethBlockNumber.ts",
+		"ethGetBlockByNumber": "tsx src/ethGetBlockByNumber.ts"
 	},
 	"keywords": [],
 	"author": "boundless-forest",
@@ -15,6 +16,7 @@
 		"ethers": "^6.13.4",
 		"smol-toml": "^1.3.0",
 		"ts-node": "^10.9.2",
-		"typescript": "^5.6.3"
+		"typescript": "^5.6.3",
+		"winston": "^3.15.0"
 	}
 }
