--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
 	"description": "",
 	"main": "index.js",
 	"scripts": {
+		"fmt": "prettier --write \"src/**/*.ts\"",
 		"ethBlockNumber": "tsx src/ethBlockNumber.ts",
 		"ethGetBlockByNumber": "tsx src/ethGetBlockByNumber.ts"
 	},
@@ -14,6 +15,7 @@
 	"dependencies": {
 		"@types/node": "^22.7.8",
 		"ethers": "^6.13.4",
+		"prettier": "^3.3.3",
 		"smol-toml": "^1.3.0",
 		"ts-node": "^10.9.2",
 		"typescript": "^5.6.3",
