--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
 		"fmt": "prettier --write \"src/**/*.ts\"",
 		"ethBlockNumber": "tsx src/ethBlockNumber.ts",
 		"ethGetBlockByNumber": "tsx src/ethGetBlockByNumber.ts",
+		"ethGetBlockByHash": "tsx src/ethGetBlockByHash.ts",
 		"ethGetCode": "tsx src/ethGetCode.ts"
 	},
 	"keywords": [],
